# every_counter

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/every_counter/: __init__.py  every_counter.py  plotting.py
tests/: proza  test_every_counter.py
