[tool.poetry]
name = "every_counter"
version = "0.1.0"
description = "count all, everywhere, everytime"
authors = ["aleksandr smolkin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "punctuation"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
